# adventVectorOfCode

1/: CMakePresets.json  a.out  main.c
2/: CMakeLists.txt  CMakePresets.json  example.txt  main.c
